# pyspell

./: .gitignore  Cargo.toml  LICENSE  README.md  bergen_vs_tromso.py  index.html  tech.md
crates/pyspell-cli/: Cargo.toml
crates/pyspell-cli/src/: main.rs
crates/pyspell-core/: Cargo.toml
crates/pyspell-core/src/: env.rs  error.rs  eval.rs  eval_async.rs  ir.rs  json.rs  lib.rs  parse.rs  value.rs  wire.rs
crates/pyspell-lang/: Cargo.toml
crates/pyspell-lang/src/: lib.rs  lower.rs  py_frontend.rs  rust_frontend.rs
crates/pyspell-wasm/: Cargo.toml
crates/pyspell-wasm/src/: lib.rs
crates/tailscale-wasm/: Cargo.toml
crates/tailscale-wasm/.cargo/: config.toml
crates/tailscale-wasm/src/: lib.rs  node_page.html
crates/tinyllm/: Cargo.toml
crates/tinyllm-wasm/: Cargo.toml
crates/tinyllm-wasm/src/: lib.rs
crates/tinyllm/examples/: convert_legacy.rs  gen_toy_model.rs  tok_encode.rs  verify_toy_model.rs
crates/tinyllm/src/: format.rs  lib.rs  math.rs  model.rs  sampler.rs  tokenizer.rs
demo/esp32-tailscale-pyspell/: Cargo.toml  PYSPELL-DEMO.md  partitions.csv  sdkconfig.defaults
demo/esp32-tailscale-pyspell/core/src/: h2.rs  peers.rs  platform.rs  tcp.rs  transport.rs
demo/esp32-tailscale-pyspell/src/: actuator.rs  config.rs.example  dataplane.rs  derp.rs  device_llm.rs  display.rs  jobcount.rs  local_server.rs  lwip_bridge.rs  main.rs  model_host.rs  net.rs  pyspell_web.rs  ui.rs
demo/esp32-tailscale-pyspell/src/control/: mod.rs
demo/esp32-tailscale-pyspell/web/: tinyllm_wasm.js  tinyllm_wasm_bg.wasm
docs/: design.md  lean-stack-roadmap.md  memory-512kb.md
esp32-mpe-core/: Cargo.toml
esp32-mpe-core/.cargo/: config.toml
esp32-mpe-core/src/: main.rs
esp32-mpe-fetch/: .gitignore  Cargo.toml  README.md
esp32-mpe-fetch/.cargo/: config.toml
esp32-mpe-fetch/src/: config.rs.example  fetch.rs  fetch_async.rs  lib.rs  net.rs  pinning.rs  rng_backend.rs  screen.rs  ts_control.rs
examples/: health.py  mem_pct.rs  oslo_fetchjson.py  oslo_temp.py  show_oslo.py
firmware/esp32s3/: Cargo.toml  partitions.csv  sdkconfig.defaults
firmware/esp32s3/.cargo/: config.toml
firmware/esp32s3/src/: main.rs
mcp/: README.md  pyspell_mcp.py
train/: .gitignore  README.md  bpe.py  build_embeddings.py  build_types.py  curate.py  delex.py  eval.py  export_v2.py  flywheel.py  gen_data.py  modal_train.py  model.py  parity_delex.py  prep_delex.py  roundtrip.py  sample.py  seeds.jsonl  train.py  validate.py  vocab_spec.py
web/: delex.js  pyspell_wasm.js  pyspell_wasm_bg.wasm  tailnet-probe.html  tailnet.html  tailscale_wasm.js  tailscale_wasm_bg.wasm  tinyllm_wasm.js
