# Own workspace root: this builds for xtensa-esp32s3-none-elf with the `esp`
# toolchain + build-std, so a host `cargo build` must never pull it in. The repo
# root workspace also lists it under `exclude`.
[workspace]

[package]
edition      = "2024"
name         = "esp32-mpe-fetch"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32-mpe-fetch"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

# Embassy: cooperative async runtime for ≥4 concurrent PySpell jobs (esp-rtos has
# no public user threads, so async is the path to parallelism).
embassy-executor = "0.10.0"
embassy-time = "0.5.0"
embassy-net = { version = "0.9.1", features = [
  "dhcpv4",
  "dns",
  "medium-ethernet",
  "tcp",
] }
embassy-sync = "0.7.0"
embedded-io-async = "0.7.0"
static_cell = "2.1.1"

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }

critical-section = "1.2.0"
embedded-io = "0.7.1"
esp-alloc = "0.10.0"
esp-backtrace = { version = "0.19.0", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.17.0", features = ["esp32s3"] }
esp-radio = { version = "0.18.0", features = [
  "esp-alloc",
  "esp32s3",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "alloc",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dhcpv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

# Tiny synchronous executor: `block_on` drives the one async API we must use
# (esp-radio's `connect_async`) to completion on the main thread, busy-polling
# while the preemptive esp-rtos radio task wakes it. Everything else stays sync.
embassy-futures = "0.1"

# TLS 1.3 (async API used in Step 2). `rustpki`+`rsa` enable the no_std cert
# verifier (`embedded_tls::pki::CertVerifier`) — met.no's chain is RSA.
embedded-tls = { version = "0.19", default-features = false, features = [
  "alloc",
  "rustpki",
  "rsa",
  "p384",
] }
rand_core = { version = "0.6", default-features = false }
# Only to name the (unused) client-auth signature type for our CryptoProvider.
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

# SPKI leaf-key pinning verifier (src/pinning.rs): a custom `TlsVerifier` that
# trusts a host by its pinned public-key hash instead of full CA-chain validation
# — one RSA-PSS verify + no 6 kB chain buffer (~45 kB → ~30 kB per verified fetch),
# so a verified fetch fits alongside the live tailscale session. Versions match
# what embedded-tls already pulls (rsa 0.9 / sha2 0.10 / der 0.7 / spki 0.7) so the
# crate graph unifies (no duplicate-version bloat).
x509-cert = { version = "0.2", default-features = false }
rsa = { version = "0.9", default-features = false }
sha2 = { version = "0.10", default-features = false }
signature = { version = "2", default-features = false }
der = { version = "0.7", default-features = false, features = ["alloc"] }

# ST7735 display on the T-Dongle S3 + the rolling PySpell job counters.
mipidsi = "0.9"
embedded-graphics = "0.8"
embedded-hal-bus = "0.3"
heapless = "0.8"

# The portable PySpell evaluator — same crate as the host tools, just with `std`
# off. `no_std + alloc`, so it links straight into this firmware.
pyspell-core = { path = "../crates/pyspell-core", default-features = false }

# Portable Tailscale client core (protocol + crypto behind platform traits). M3.2:
# we provide an embassy/embedded-tls platform adapter. Building it first verifies
# its crypto crates compile no_std on xtensa + unify with embedded-tls's.
tailscale-core = { path = "../demo/esp32-tailscale-pyspell/core" }

# tailscale-core's crypto pulls two getrandom majors (0.2 via tailscale-core,
# 0.3 via snow). On bare-metal xtensa neither has a built-in backend, so we
# register custom sources backed by the esp-hal hardware RNG (see src/rng_backend.rs).
getrandom02 = { package = "getrandom", version = "0.2", features = ["custom"] }
getrandom03 = { package = "getrandom", version = "0.3" }

# Derive node public keys from the stored private keys; build control JSON.
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
